Fixes #41-#46, #49-#50, #52, #54 and #64
#64 settles who owns MemoryCellGroups rather than patching the trace it was
found by: one monitor guards the group list, the address index and every
group's cells; getGroups()/getCells()/cellsAt() hand out copies instead of
views of the live ArrayLists; listeners are told outside the lock; a cell's
own fields are volatile. The rule is in PLAN.md section 1 and CLAUDE.md,
because the old contract was documented too - in the javadoc telling every
caller to copy the list, which the panels did and the fakes did not.

#45 tells each connection listener inside its own try, so one window's bug
can no longer turn a connection that succeeded into a FAILED one, and moves
the cleanup into a finally so an Error stops leaking the transport.

#42 offers Disconnect only when there is something to disconnect, and puts
the window under a wait cursor while connecting - which is the only honest
affordance for something that cannot be cancelled.

#44 marshals the post-connect settings write to the event thread that owns
Settings, and says so in Settings itself.

#49 and #50 make a queued job talk to the connection and the cell it was
queued for, instead of to whatever the window is pointing at when it runs.

#41 gives the settings dialog a default button, an Escape, and one way out
rather than two that disagreed about saving, asks before deleting a saved
profile, and binds Escape to Cancel in ProgressDialog.

#43 stops Escape wiping the Number Converter; clearing is a button.

#46 keeps the halt-to-prompt pairing in the decoder rather than in the answer
list the command thread empties before every command, so a command issued as
the machine stops no longer swallows the stop event.

#52 makes the fake's RUN/HALT switch volatile. #54 has every wait ask for the
command timeout instead of naming the constant, so the setting moves the whole
of an exchange rather than half of it.

749 tests, all green with no DISPLAY.

Co-Authored-By: Claude Opus 5 (1M